corrigido cor do botao cinza do modal de editar e add transação

--- a/Frontend/src/styles/colors.css
+++ b/Frontend/src/styles/colors.css
@@ -12,5 +12,5 @@
   --background-delete: #E4F2FD;
   --button-blue: rgba(58, 159, 241, 1);
   --button-red: rgba(255, 87, 107, 1);
-  --color-gray: gray;
+  --gray: rgba(185, 185, 185, 1);
 }
