--- a/Frontend/src/components/Header-Route-Free/styles.css
+++ b/Frontend/src/components/Header-Route-Free/styles.css
@@ -4,7 +4,7 @@
   justify-content: space-between;
 
   width: 100vw;
-  height: 125px;
+  height: 185px;
 }
 
 .background-color {
@@ -16,12 +16,14 @@
   height: 45px;
 
   margin-left: 100px;
+  margin-bottom: 50px;
 }
 
 .box-profile {
   width: 138px;
   height: 56px;
   margin-right: 100px;
+  margin-bottom: 50px;
   cursor: pointer;
   display: flex;
 }
