--- a/Frontend/src/pages/Main/main.css
+++ b/Frontend/src/pages/Main/main.css
@@ -15,6 +15,15 @@
     justify-content: center;
 }
 
+.border-radius-header {
+    border-radius: 60px 60px 0px 0px;
+    background-color: var(--white);
+    height: 60px;
+    margin-top: -43px;
+    width: 100%;
+    position: absolute;
+}
+
 .filter-and-transactions {
     display: flex;
     flex-direction: column;
