--- a/Frontend/src/styles/global.css
+++ b/Frontend/src/styles/global.css
@@ -9,3 +9,36 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
+
+@media (max-width: 768px) {
+  .info-to-user {
+    display: none;
+  }
+
+  .container-main .user-login-area {
+    width: 100%;
+    height: 100%;
+  }
+
+  .user-login-area {
+    display: flex;
+    margin-left: -9rem;
+  }
+
+  .user-login-area input {
+    width: 32rem;
+  }
+
+  .user-login-area button {
+    width: 30rem;
+  }
+
+  .main-content {
+    height: calc(92% - 360px);
+    margin-top: 1.8rem;
+  }
+
+  .button-default {
+    width: 30rem;
+  }
+}
